--- a/app/src/main/res/layout/activity_how_tara_works.xml
+++ b/app/src/main/res/layout/activity_how_tara_works.xml
@@ -86,23 +86,21 @@
                 <ImageView
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="30dp"
                     android:background="@color/white"/>
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="200dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:layout_marginLeft="120dp"
+                android:layout_marginLeft="100dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/firstP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
                     android:textSize="16sp"
                     android:text="Signup"
@@ -111,8 +109,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:textSize="16sp"
                     android:text="Easy and fast verification to gain access to the TARA carHosted sharing community."
                     android:textColor="@color/white"/>
@@ -120,9 +116,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="40dp"
                     android:textSize="16sp"
                     android:text="Search and Book"
                     android:textColor="@color/white"/>
@@ -130,8 +124,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:textSize="16sp"
                     android:text="Find the carHosted of your choice by using our search filter."
                     android:textColor="@color/white"/>
@@ -139,9 +131,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="40dp"
                     android:textSize="16sp"
                     android:text="Get the carHosted"
                     android:textColor="@color/white"/>
@@ -149,8 +139,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:textSize="16sp"
                     android:text="Meet the Host or have it delivered to you."
                     android:textColor="@color/white"/>
@@ -158,9 +146,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="40dp"
                     android:textSize="16sp"
                     android:text="TARA safe and have fun!"
                     android:textColor="@color/white"/>
@@ -168,8 +154,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:textSize="16sp"
                     android:text="Cruise to your dreams in style under TARA’s protection."
                     android:textColor="@color/white"/>
