--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -16,8 +16,8 @@
             android:id="@+id/signupTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="70dp"
             android:layout_marginRight="50dp"
             android:fontFamily="@font/poppins_regular"
             android:text="Sign Up"
@@ -33,22 +33,22 @@
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="50dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="12dp"
             android:layout_marginRight="50dp"
             android:backgroundTint="@color/white1"
-            android:textColorHint="@color/white1"
-            android:textColor="@color/white1"
-            android:inputType="text"
-            android:imeOptions="actionNext"
-            android:maxLines="1"
-            android:hint="Full Name"
             android:drawableStart="@drawable/ic_name"
             android:drawablePadding="10dp"
             android:drawableTint="@color/white2"
+            android:hint="Full Name"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:maxLines="1"
             android:paddingBottom="15dp"
+            android:textColor="@color/white1"
+            android:textColorHint="@color/white1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintHorizontal_bias="0.505"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/signupTxt" />
 
@@ -56,40 +56,41 @@
             android:id="@+id/emailSignup"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="50dp"
             android:backgroundTint="@color/white1"
-            android:textColorHint="@color/white1"
-            android:textColor="@color/white1"
-            android:inputType="text"
-            android:imeOptions="actionNext"
-            android:maxLines="1"
-            android:hint="Email"
             android:drawableStart="@drawable/ic_email"
             android:drawablePadding="10dp"
             android:drawableTint="@color/white2"
+            android:hint="Email"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:maxLines="1"
             android:paddingBottom="15dp"
-            app:layout_constraintEnd_toEndOf="@+id/name"
-            app:layout_constraintStart_toStartOf="@+id/name"
-            app:layout_constraintTop_toBottomOf="@+id/name" />
+            android:textColor="@color/white1"
+            android:textColorHint="@color/white1"
+
+            app:layout_constraintEnd_toEndOf="@+id/contactNum"
+            app:layout_constraintStart_toStartOf="@+id/contactNum"
+            app:layout_constraintTop_toBottomOf="@+id/contactNum" />
 
         <EditText
             android:id="@+id/passwordSignup"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="50dp"
             android:backgroundTint="@color/white1"
-            android:textColorHint="@color/white1"
-            android:textColor="@color/white1"
-            android:hint="Password"
             android:drawableStart="@drawable/ic_password"
             android:drawablePadding="10dp"
             android:drawableTint="@color/white2"
-            android:paddingBottom="15dp"
+            android:hint="Password"
             android:inputType="textPassword"
+            android:paddingBottom="15dp"
+            android:textColor="@color/white1"
+            android:textColorHint="@color/white1"
             app:layout_constraintEnd_toEndOf="@+id/emailSignup"
             app:layout_constraintStart_toStartOf="@+id/emailSignup"
             app:layout_constraintTop_toBottomOf="@+id/emailSignup" />
@@ -98,40 +99,60 @@
             android:id="@+id/confirmPassword"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="50dp"
             android:backgroundTint="@color/white1"
-            android:textColorHint="@color/white1"
-            android:hint="Confirm Password"
-            android:textColor="@color/white1"
             android:drawableStart="@drawable/ic_password"
             android:drawablePadding="10dp"
             android:drawableTint="@color/white2"
-            android:paddingBottom="15dp"
+            android:hint="Confirm Password"
             android:inputType="textPassword"
+            android:paddingBottom="15dp"
+            android:textColor="@color/white1"
+            android:textColorHint="@color/white1"
             app:layout_constraintEnd_toEndOf="@+id/passwordSignup"
             app:layout_constraintStart_toStartOf="@+id/passwordSignup"
             app:layout_constraintTop_toBottomOf="@+id/passwordSignup" />
 
 
+        <EditText
+            android:id="@+id/contactNum"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="50dp"
+            android:backgroundTint="@color/white1"
+            android:drawableStart="@drawable/ic_contact"
+            android:drawablePadding="10dp"
+            android:drawableTint="@color/white2"
+            android:hint="Contact Number"
+            android:paddingBottom="15dp"
+            android:textColor="@color/white1"
+            android:textColorHint="@color/white1"
+            app:layout_constraintTop_toBottomOf="@+id/name"
+            app:layout_constraintEnd_toEndOf="@+id/name"
+            app:layout_constraintStart_toStartOf="@+id/name"
+            tools:layout_editor_absoluteY="214dp" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/signupBtn"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="30dp"
             android:layout_marginRight="50dp"
+            android:background="@drawable/btn_login_signup"
             android:fontFamily="@font/poppins_regular"
             android:text="Sign up"
             android:textColor="@color/violet"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:background="@drawable/btn_login_signup"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/confirmPassword"  />
+            app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
 
         <TextView
             android:id="@+id/textView2"
@@ -140,8 +161,8 @@
             android:layout_marginTop="30dp"
             android:fontFamily="@font/poppins_medium"
             android:text="or sign up with:"
-            android:textSize="16sp"
             android:textColor="@color/white"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/signupBtn"
             app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="@+id/signupBtn"
@@ -152,8 +173,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="25dp"
-            app:cardCornerRadius="10dp"
             app:cardBackgroundColor="@color/fui_transparent"
+            app:cardCornerRadius="10dp"
             app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="@+id/textView2"
@@ -163,7 +184,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:src="@drawable/ic_google1"/>
+                android:src="@drawable/ic_google1" />
 
 
         </androidx.cardview.widget.CardView>
