--- a/app/src/main/res/layout/activity_car_details.xml
+++ b/app/src/main/res/layout/activity_car_details.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grayish_blue1"
+    android:background="@drawable/gradient_background"
     tools:context=".Explore.CarDetails">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -93,11 +93,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="10dp"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
-                        android:text="₱ "
                         android:fontFamily="@font/poppins_regular"
+                        android:text="₱ "
                         android:textColor="@color/violet"
                         android:textSize="15dp" />
 
