--- a/app/src/main/res/layout/activity_host_car.xml
+++ b/app/src/main/res/layout/activity_host_car.xml
@@ -665,11 +665,13 @@
                     android:textStyle="bold"/>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                     android:layout_width="150dp"
                     android:layout_height="50dp"
+                    android:backgroundTint="@color/dark_blue1"
                     android:hint="@string/select"
-                    android:textColorHint="@color/dark_blue1"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
+                    android:textColorHint="@color/dark_blue1">
+
                     <AutoCompleteTextView
                         android:id="@+id/etTransmission"
                         android:layout_width="match_parent"
