--- a/app/src/main/res/layout/car_item.xml
+++ b/app/src/main/res/layout/car_item.xml
@@ -4,9 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardElevation="5dp"
     app:cardCornerRadius="15dp"
-    android:layout_margin="15dp">
+    android:layout_marginTop="15dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp">
 
+//change layout
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,10 +27,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
+            android:fontFamily="@font/poppins_regular"
             android:text="Brand Model Year"
             android:textSize="16dp"
             android:layout_marginTop="10dp"
-            android:textColor="@color/black"
+            android:textColor="@color/dark_blue1"
             android:textStyle="bold"/>
 
         <TextView
@@ -34,9 +39,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
+            android:fontFamily="@font/poppins_regular"
             android:text="Location"
-            android:textColor="@color/black"
-            android:textSize="13dp" />
+            android:textColor="@color/dark_blue1"
+            android:textSize="14dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -48,7 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="₱ "
-                android:textColor="@color/red"
+                android:textColor="@color/violet"
                 android:textSize="13dp"
                 android:layout_marginBottom="10dp"/>
 
@@ -59,14 +65,14 @@
                 android:text="Price"
                 android:textSize="13dp"
                 android:layout_marginBottom="10dp"
-                android:textColor="@color/red"/>
+                android:textColor="@color/violet"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:text="per day"
-                android:textColor="@color/black"
+                android:textColor="@color/dark_blue1"
                 android:textSize="13dp"
                 android:layout_marginBottom="10dp"/>
 
