--- a/app/src/main/res/layout/custom_loading.xml
+++ b/app/src/main/res/layout/custom_loading.xml
@@ -9,6 +9,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:cardElevation="10dp"
         app:cardCornerRadius="20dp"
         app:cardBackgroundColor="@color/white2">
 
