--- a/app/src/main/res/layout/message_dialog.xml
+++ b/app/src/main/res/layout/message_dialog.xml
@@ -29,7 +29,7 @@
                 android:text="You're account must be verified"
                 android:textStyle="bold"
                 android:textSize="18sp"
-                android:textColor="@color/dark_blue" />
+                android:textColor="@color/dark_blue1" />
 
             <TextView
                 android:id="@+id/tvSubMessage"
@@ -39,7 +39,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:textStyle="bold"
                 android:text="Go to Profile -> Account -> Verify Account"
-                android:textColor="@color/dark_blue"/>
+                android:textColor="@color/dark_blue1"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/okayBtn"
