--- a/app/src/main/res/layout/reset_email_dialog.xml
+++ b/app/src/main/res/layout/reset_email_dialog.xml
@@ -31,7 +31,7 @@
                 android:text="Enter email adress"
                 android:textStyle="bold"
                 android:textSize="20dp"
-                android:textColor="@color/dark_blue" />
+                android:textColor="@color/dark_blue1" />
 
             <EditText
                 android:id="@+id/tvMailReset"
