--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -28,6 +28,5 @@
     <color name="green2">#c6f7e7</color>
     <color name="green3">#08FF6B</color>
     <color name="status_bar">#3f77ab</color>
-
 
 </resources>
